# primeNumber

./: CMakeLists.txt  a.out  app.cpp
lib/: logic.cpp  logic.h  pncheck.cpp  pncheck.h
main/: main.cpp
